re PR c++/64079 (%+D in diagnostics breaks pragma GCC diagnostic)

2015-07-24  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR c++/64079
	* toplev.c (check_global_declaration): Use DECL_SOURCE_LOCATION
	and "%qD" in warning_at instead of "%q+D" in warning.

/testsuite
2015-07-24  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR c++/64079
	* c-c++-common/Wunused-function-1.c: New.

From-SVN: r226191